# space

./: CLAUDE.md  Cargo.toml
.cargo/: config.toml
assets/: solar_system.ron
crates/game/: Cargo.toml
crates/game/src/: camera.rs  hud.rs  main.rs  maneuver.rs  prediction.rs  sim.rs  solar_system.rs  target.rs  trail.rs
crates/game/src/nav_map/: body.rs  camera.rs  hud.rs  maneuver.rs  mod.rs  prediction.rs  target.rs  trajectory.rs
crates/prediction/: Cargo.toml
crates/prediction/src/: encounter.rs  lib.rs  phase.rs  predict.rs  tests.rs  types.rs
crates/sim/: Cargo.toml
crates/sim/src/: burn.rs  gravity.rs  integrator.rs  lib.rs  orbital_math.rs  tests.rs  types.rs
crates/stability/: Cargo.toml
crates/stability/src/: main.rs
