[workspace]
resolver = "3"
members = [
    "crates/sim",
    "crates/prediction",
    "crates/game",
    "crates/stability",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Slightly optimize even debug builds for Bevy's runtime perf.
[profile.dev]
opt-level = 1

# Fully optimize dependencies in dev (Bevy is heavy).
[profile.dev.package."*"]
opt-level = 3

# Optimize release builds.
[profile.release]
codegen-units = 1
lto = "thin"
